# Research-Labs

./: .env  .gitignore  .tmuxp.yaml  LICENSE  README.md  docker-compose.yml  ed.hup  package-lock.json  package.json
research-labs/rust-backend/: .env  Cargo.toml  Dockerfile
research-labs/rust-backend/.sqlx/: query-03e7ea8a49cf3d7f7696862de687fb04319b36934b581da873205779d5bf8db3.json  query-07251b6abe60f08022a4c8ab49d41e4332f8835e96ab6e2fe32eea45d8f2b7af.json  query-1447b2838ea232d8d886b998620c761ea923aebb5f2166f7a6de1603b7f0377c.json  query-19610314c8055fd58b4d0a84d3a13b00c3d77498de87616d0ccc8d7eed7f4a2b.json  query-215525dd86528a27a2d609eae3ac034b75938b6e851f7e820344d9992728d053.json  query-247a79d660b6b812db3a7b3861a5498d1507eb6fc1062917898a7a4978e6d57d.json  query-4ba493a00586f4023202f8203d6e3885e4d06ba788432669ec39862626e1fedb.json  query-4d4a5af7d7606258e704f8819ece16998c107a2fca1e37367530fdd9f278d686.json  query-5457aede9bd968100bc62d8a9802f1ba882cd00d138bac7d5434e69c2d18cd44.json  query-80ae93954780c35550ee3002c58317dac75ef67cb35dbaf7b05f7f4441736f12.json  query-9f54f40d1b171f51d38aa91598c8fa3708b562202fe30a57bbb1e8ac565999dd.json  query-bc18bf914882521b7792a230ae4f3ecc3091b3691597bcd7a4a167fe89886f1d.json  query-bde713d67823bf8c34dd4cbe7661c5b5033e3c211499b88a15d89e89192af595.json  query-cb29f1e477ad3afd2a12ccf5b7bb8a7ac9e7e75664f888f981969f3de4bd407d.json  query-d1797f02803db7d1c7341d61897ad13d86de80ff613c3a8fec0df3407fa14a1f.json  query-e531482843700b84055611d953e5372495da5e5ac0fd45dae9e9f2a3a64f5c07.json  (+2 more)
research-labs/rust-backend/src/: errors.rs  main.rs
(+233 files in other folders)
