[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = ["chrono","uuid", "postgres", "mysql", "runtime-tokio", "tls-native-tls", "time"] }
tokio = {version="1"}
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }  # <--- this is what you're missing
dotenv = "0.15"

actix-cors = "0.7"
futures-util = "0.3.31"
actix-multipart = "0.7.2"
futures = "0.3.31"

